# solid-todo

./: README.md  pyproject.toml
config/docker/: docker-compose.yml
config/docker/database/: Dockerfile  init-mongo.js
config/docker/server/: Dockerfile
src/: app.py  server.py  services.py  services_test.py  todo.py  todo_list.py  todo_list_test.py  todo_test.py
src/db/: __init__.py  interfaces.py
src/db/mongo/: __init__.py  connection.py  mappers.py  models.py  repos.py
src/db/testing/: __init__.py
