[tool.poetry]
name = "solid-todo"
version = "0.1.0"
description = ""
authors = ["abhilashkakumanu1 <abhilashkakumanu1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mongoengine = "^0.24.0"
python-dotenv = "^0.19.2"
pydantic = "^1.9.0"
dnspython = "^2.2.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
